rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__cframe-special-cases__input.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_decoded
---
num_types: 1
num_instances: 24
chunks:
  - Meta:
      entries:
        - - ExplicitAutoJoints
          - "true"
  - Inst:
      type_id: 0
      type_name: CFrameValue
      object_format: 0
      referents:
        - 0
        - 1
        - 2
        - 3
        - 4
        - 5
        - 6
        - 7
        - 8
        - 9
        - 10
        - 11
        - 12
        - 13
        - 14
        - 15
        - 16
        - 17
        - 18
        - 19
        - 20
        - 21
        - 22
        - 23
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - "02"
        - "03"
        - "05"
        - "06"
        - "07"
        - "09"
        - 0a
        - 0c
        - 0d
        - 0e
        - "10"
        - "11"
        - "14"
        - "15"
        - "17"
        - "18"
        - "19"
        - 1b
        - 1c
        - 1e
        - 1f
        - "20"
        - "22"
        - "23"
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Value
      prop_type: CFrame
      values:
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 0
              - -1
            - - 0
              - 1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - -1
              - 0
            - - 0
              - 0
              - -1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 0
              - 1
            - - 0
              - -1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 1
              - 0
            - - 1
              - 0
              - 0
            - - 0
              - 0
              - -1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - 1
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - -1
              - 0
            - - 1
              - 0
              - 0
            - - 0
              - 0
              - 1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - -1
            - - 1
              - 0
              - 0
            - - 0
              - -1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
            - - 1
              - 0
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - -1
            - - 0
              - 1
              - 0
            - - 1
              - 0
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - -1
              - 0
            - - 0
              - 0
              - -1
            - - 1
              - 0
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - 1
            - - 0
              - -1
              - 0
            - - 1
              - 0
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - -1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - -1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - -1
              - 0
              - 0
            - - 0
              - 0
              - 1
            - - 0
              - 1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - -1
              - 0
              - 0
            - - 0
              - -1
              - 0
            - - 0
              - 0
              - 1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - -1
              - 0
              - 0
            - - 0
              - 0
              - -1
            - - 0
              - -1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 1
              - 0
            - - -1
              - 0
              - 0
            - - 0
              - 0
              - 1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - -1
            - - -1
              - 0
              - 0
            - - 0
              - 1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - -1
              - 0
            - - -1
              - 0
              - 0
            - - 0
              - 0
              - -1
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - 1
            - - -1
              - 0
              - 0
            - - 0
              - -1
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - -1
            - - -1
              - 0
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - 1
            - - 0
              - 1
              - 0
            - - -1
              - 0
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - -1
              - 0
            - - 0
              - 0
              - 1
            - - -1
              - 0
              - 0
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 0
              - 0
              - -1
            - - 0
              - -1
              - 0
            - - -1
              - 0
              - 0
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
        - - 3
          - -1
        - - 4
          - -1
        - - 5
          - -1
        - - 6
          - -1
        - - 7
          - -1
        - - 8
          - -1
        - - 9
          - -1
        - - 10
          - -1
        - - 11
          - -1
        - - 12
          - -1
        - - 13
          - -1
        - - 14
          - -1
        - - 15
          - -1
        - - 16
          - -1
        - - 17
          - -1
        - - 18
          - -1
        - - 19
          - -1
        - - 20
          - -1
        - - 21
          - -1
        - - 22
          - -1
        - - 23
          - -1
  - End
